Added Fruit Popsicles to my list of recipes

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/strawberry-shake.html">Yummy Strawberry Shake</a>
+    <a href="recipes/oreo-cheesecake.html">Oreo Cheesecake</a>
 </body>
 </html>
