Added fruit popsicles to my list of recipes

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/strawberry-shake.html">Yummy Strawberry Shake</a>
     <a href="recipes/oreo-cheesecake.html">Oreo Cheesecake</a>
+    <a href="recipes/fruit-popsicles.html">Homemade Fruit Popsicles</a>
 </body>
 </html>
